<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.fragments.leave_applications.LeaveApplicationsFragment">


    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/bg_home_btn"
        android:backgroundTint="@color/app_icon_color"
        android:text="@string/pending"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/btn_approved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_approved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_home_btn"
        android:backgroundTint="@color/app_icon_color"
        android:text="@string/approved"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/btn_pending"
        app:layout_constraintEnd_toStartOf="@+id/btn_rejected"
        app:layout_constraintStart_toEndOf="@+id/btn_pending"
        app:layout_constraintTop_toTopOf="@+id/btn_pending" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rejected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_home_btn"
        android:backgroundTint="@color/app_icon_color"
        android:text="@string/rejected"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/btn_approved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_approved"
        app:layout_constraintTop_toTopOf="@+id/btn_approved" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dataList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem=""
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rejected" />


</androidx.constraintlayout.widget.ConstraintLayout>