<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inoutbackground"
    tools:context=".ui.fragments.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_splash"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:srcCompat="@drawable/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_bottom_sheet"
            android:elevation="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_splash">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/bg_login_edit_textt"
                android:hint="@string/enter_your_email_text"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:background="@color/light_white"
                android:paddingHorizontal="@dimen/_2sdp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@+id/et_email"
                app:layout_constraintStart_toStartOf="@id/et_email"
                app:layout_constraintTop_toTopOf="@+id/et_email"
                app:layout_constraintWidth_percent="0.15" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/bg_login_edit_textt"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:background="@color/light_white"
                android:paddingHorizontal="@dimen/_2sdp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintTop_toTopOf="@+id/et_password"
                app:layout_constraintWidth_percent="0.15" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:indicatorColor="@color/base_color"
                app:indicatorSize="@dimen/_25sdp"
                app:layout_constraintBottom_toBottomOf="@+id/bt_login"
                app:layout_constraintEnd_toEndOf="@+id/bt_login"
                app:layout_constraintStart_toStartOf="@+id/bt_login"
                app:layout_constraintTop_toTopOf="@+id/bt_login"
                app:layout_constraintVertical_bias="0.2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="@id/bt_login"
                app:layout_constraintStart_toStartOf="@id/bt_login"
                app:layout_constraintTop_toBottomOf="@+id/bt_login">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_dont_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginVertical="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_2sdp"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.15" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_create_account"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/_15sdp"
                    android:background="@drawable/button_bg"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.36"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dont_account"
                    app:layout_constraintWidth_percent="0.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include
            android:id="@+id/drawer_layout_inner"
            layout="@layout/home_drawer_layout" />
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
