<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inoutbackground"
    tools:context=".ui.fragments.signup.SignUpFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_singupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_2sdp"
        android:text="@string/welcome_to_signup_page"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/bg_login_edit_textt"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/first_name"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_singupName" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/bg_login_edit_textt"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/last_name"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_cnic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/bg_login_edit_textt"
        android:drawableStart="@drawable/baseline_credit_card_24"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="CNIC"
        android:inputType="number"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_contact_no"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/bg_login_edit_textt"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="Contact Number"
        android:inputType="number"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cnic" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/bg_login_edit_textt"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="Email"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contact_no" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/bg_login_edit_textt"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/password"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_is_applicant"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:checked="true"
        android:text="I am an applciant"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_applicationt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I am an Applicant"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/checkbox_is_applicant"
        app:layout_constraintStart_toEndOf="@id/checkbox_is_applicant"
        app:layout_constraintTop_toTopOf="@+id/checkbox_is_applicant" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/button_bg"
        android:text="Sign up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_applicationt"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:text="Already Have an Account? Sign In"
        android:textColor="@color/base_color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bt_login"
        app:layout_constraintStart_toStartOf="@+id/bt_login"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />


</androidx.constraintlayout.widget.ConstraintLayout>